# parrot

./: .gitignore  Cargo.toml  LICENSE  grammar.md  makefile  readme.md
assets/: colors.py
src/: cli.rs  cmd.rs  diff.rs  editor.rs  error.rs  main.rs  parser.rs  term.rs
src/data/: config.rs  metadata.rs  mod.rs  snapshots.rs
src/driver/: cmd.rs  mod.rs  parser.rs  repl.rs  scanner.rs  util.rs
src/term/: diff.rs  help.rs  mod.rs  repl.rs  theme.rs
test/.parrot/: metadata.json
test/.parrot/snapshots/: fail-run.out.txt  failed-run.out.txt  init.out.txt  no-init.out.txt  success-run.out.txt
test/fail/.parrot/: metadata.json
test/fail/.parrot/snapshots/: fail.out.txt
test/pass/.parrot/: metadata.json
