[package]
name = "parrot"
version = "0.1.0"
authors = ["CharlyCst <castes.ch@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.clap]
version = "3.0.0-beta.1"
default-features = false
features = [ "suggestions", "derive", "std" ]

