[package]
name = "parrot-snap"
version = "0.0.1"
description = "A colorful and chatty CLI snapshot testing tool"
keywords = ["cli", "terminal", "testing", "snapshot"]
categories = ["command-line-utilities", "development-tools"]
exclude = [ ".parrot/", "test/", "assets/"]
authors = ["CharlyCst <castes.ch@gmail.com>"]
repository = "https://github.com/CharlyCst/parrot"
readme = "readme.md"
license = "MIT"
edition = "2018"

[[bin]]
name = "parrot"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termion = "1.5"
rand = "0.7"
regex = "1"
nom = "5.1.2"

[dependencies.clap]
version = "3.0.0-beta.1"
default-features = false
features = [ "suggestions", "derive", "std" ]

